Fixed some bugs Fixed some n+1 queries